@@ -1,4 +1,4 @@
->$NetBSD: CHANGES-2006,v 1.1819 2006/11/14 17:04:21 joerg Exp $
+>$NetBSD: CHANGES-2006,v 1.1820 2006/11/14 17:19:55 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -5302,3 +5302,6 @@ Changes to the packages collection and infrastructure in 2006:
 	Added x11/xf86driproto version 2.0.3 [joerg 2006-11-14]
 	Added x11/xf86dgaproto version 2.0.2 [joerg 2006-11-14]
 	Added x11/modular-xorg-server version 1.1.1 [joerg 2006-11-14]
+	Added x11/xf86-input-keyboard version 1.1.1 [joerg 2006-11-14]
+	Added x11/xf86-input-mouse version 1.1.2 [joerg 2006-11-14]
+	Added x11/xf86-video-ati version 6.6.3 [joerg 2006-11-14]
